--- a/index.html
+++ b/index.html
@@ -5,10 +5,25 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+   <link rel="stylesheet" href="css/style.css">
    <title>JS Mail Dadi Vasco</title>
 </head>
 
 <body>
+   <!-- Mail -->
+   <div class="container">
+      <div class="row text-center">
+         <h1>Mail</h1>
+         <h3>Email inserita: <span id="uEmail" class="text-uppercase"></span></h3>
+         <h4 id="enabledEmail" class="text-uppercase"></h4>
+      </div>
+      <!-- Dadi -->
+      <div class="row text-center">
+         <h1>Dadi</h1>
+      </div>
+   </div>
    <script src="js/script.js"></script>
 </body>
 
