--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
    <!-- Mail -->
    <div class="container">
       <div class="row text-center">
-         <h1>Mail</h1>
-         <h3>Email inserita: <span id="uEmail" class="text-uppercase"></span></h3>
-         <h4 id="enabledEmail" class="text-uppercase"></h4>
+         <div class="col-12">
+            <h1>Mail</h1>
+            <h3>Email inserita: <span id="uEmail" class="text-uppercase"></span></h3>
+            <h4 id="enabledEmail" class="text-uppercase"></h4>
+         </div>
       </div>
       <!-- Dadi -->
       <div class="row text-center">
          <h1>Dadi</h1>
+
       </div>
    </div>
    <script src="js/script.js"></script>
